# aasm-observability

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: requirements.txt
backend/app/: database.py  events.py  graph.py  heatmap.py  ingest.py  main.py  memory.py  risk.py  timeline.py  tools.py
backend/tests/: test_graph.py  test_risk_heatmap.py  test_timeline.py  test_tools.py
frontend/: package.json  tsconfig.json  tsconfig.tsbuildinfo  typings.d.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentGraph.tsx  ClientTime.tsx  RiskHeatmap.tsx  SequenceTimeline.tsx  StatCard.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts
sdk/: pyproject.toml
sdk/arsp_sdk/: __init__.py  _client.py  _context.py
sdk/arsp_sdk/_patches/: __init__.py  chromadb_patch.py  crewai_patch.py  gemini_patch.py  httpx_patch.py  langchain_patch.py  ollama_patch.py  openai_patch.py  pinecone_patch.py  requests_patch.py
sdk/tests/: test_sdk.py
